# storopoli.com

./: .gitattributes  .gitignore  .justfile  .mlc_config.json  .typos.toml  404.html  MIGRATION.md  README.md  atom.xml  cabal.project  config.toml  extra.css  flake.nix  hie.yaml  index.html  lychee.toml  robots.txt  sitemap.xml  stack.yaml
blog/: about.md  blog.cabal  contact.md  index.html  publickey.txt  site.hs
blog/beauty-of-math-incompleteness/: index.html
blog/bib/: bibliography.bib
blog/bitvm/: index.html
blog/crypto-basics/: index.html
blog/css/: bib.css  default.css  tufte.css
blog/dead-man-switch/: index.html
blog/htmx/: index.html
blog/lindley-paradox/: index.html
blog/mnemonic/: index.html
blog/posts/: 2015-08-12-spqr.markdown  2015-08-12-spqr.md  2023-11-10-soydev.md  2023-11-20-word_embeddings.md  2023-11-23-lindley_paradox.md  2023-11-28-zero_cost_abstractions.md  2024-01-14-htmx.md  2024-01-30-sudoku.md  2024-02-05-crypto-basics.md  2024-02-11-mnemonic.md  2024-03-23-dead-man-switch.md  2024-04-14-shamir-secret-sharing.md  2024-06-08-zkp.md  2024-06-22-von-neumann.md  2024-11-03-zig-comptime.md  2024-11-15-taproot.md  2025-01-09-letter-to-my-son.md  2025-02-10-bitvm.md  2025-04-07-randomness.md  2025-05-24-beauty-of-math-incompleteness.md  2025-07-24-dev-workflow.md  2025-08-09-letter-to-my-son.md  2025-11-09-bifi.md  2026-01-04-evm-yubikeys.md
blog/randomness/: index.html
blog/road-less-travelled/: index.html
blog/scripts/: math.ts
blog/shamir-secret-sharing/: index.html
blog/soydev/: index.html
blog/sudoku/: index.html
blog/taproot/: index.html
blog/templates/: archive.html  default.html  post-list.html  post.html  tags.html
(+128 files in other folders)
