name:          blog
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

executable site
    main-is:          site.hs
    build-depends:
          base              >=4        && <5
        , bytestring        >=0.12.1.0
        , filepath          >=1.4
        , hakyll            >=4.16     && <5
        , pandoc            >=3.6      && <4
        , pandoc-sidenote   >=0.23
        , pandoc-types      >=1.2      && <2
        , process           >=1.6.25
        , skylighting-core  >=0.14.4
        , text              >=2.1.1

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -O2 -threaded -rtsopts -with-rtsopts=-N

    default-language: Haskell2010
